--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ repositories {
 }
 
 ext {
-    jetty_version = '11.0.15'
+    jetty_version = '12.0.11'
 }
 
 
@@ -19,14 +19,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     //jetty:
-    implementation "org.eclipse.jetty:jetty-annotations:$jetty_version"
-    implementation "org.eclipse.jetty:jetty-client:$jetty_version"
-    implementation "org.eclipse.jetty:jetty-deploy:$jetty_version"
-    implementation "org.eclipse.jetty:jetty-plus:$jetty_version"
-    implementation "org.eclipse.jetty:jetty-servlets:$jetty_version"
-    implementation "org.eclipse.jetty:jetty-util:$jetty_version"
-    implementation "org.eclipse.jetty.websocket:websocket-jetty-client:$jetty_version"
-    implementation "org.eclipse.jetty.websocket:websocket-jetty-server:$jetty_version"
+    implementation "org.eclipse.jetty.websocket:jetty-websocket-jetty-client:$jetty_version"
+    implementation "org.eclipse.jetty.ee10.websocket:jetty-ee10-websocket-jetty-server:$jetty_version"
     implementation 'javax.servlet:javax.servlet-api:3.1.0'
 
     implementation  'net.sourceforge.findbugs:jsr305:1.3.7'
